--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <ul>
         <li><a href="#" class="link-inline">Студия</a> </li>
-        <li><a href="#" class="link-inline">Портфолио</a></li>
+        <li><a href="./portfolio.html" class="link-inline">Портфолио</a></li>
         <li><a href="#" class="link-inline">Контакты</a></li>
       </ul>
     </nav>
