--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>goit-markup-hw-02</title>
+  <link href="css/style.css">
 </head>
 
 <body>
@@ -20,11 +21,11 @@
   </header>
 
   <main>
-    <section>
+    <section1>
       <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
       <button type="button" class="button">Заказать услугу</button>
-    </section>
-    <section>
+    </section1>
+    <section2>
       <ul>
         <li>
           <h3>Внимание к деталям</h3>
@@ -47,18 +48,18 @@
           </p>
         </li>
       </ul>
-    </section>
+    </section2>
 
-    <section>
+    <section3>
       <h2>Чем мы занимаемся</h2>
       <ul>
         <li><img src="./media/zan1.jpeg" alt="занятие1" width="370" height="294" /> </li>
         <li> <img src="./media/zan2.jpeg" alt="занятие2" width="370" height="294" /> </li>
         <li> <img src="./media/zan3.jpeg" alt="занятие3" width="370" height="294" /></li>
       </ul>
-    </section>
+    </section3>
 
-    <section>
+    <section4>
 
       <h2>Наша команда</h2>
       <ul>
@@ -84,7 +85,7 @@
         </li>
       </ul>
 
-    </section>
+    </section4>
 
   </main>
   <footer>
