--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>goit-markup-hw-02</title>
-  <link href="css/style.css">
+  <link href="./css/style.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
   </header>
 
   <main>
-    <section1>
+    <section>
       <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
       <button type="button" class="button">Заказать услугу</button>
-    </section1>
+    </section>
     <section2>
       <ul>
         <li>
@@ -48,18 +48,18 @@
           </p>
         </li>
       </ul>
-    </section2>
+    </section>
 
-    <section3>
+    <section>
       <h2>Чем мы занимаемся</h2>
       <ul>
         <li><img src="./media/zan1.jpeg" alt="занятие1" width="370" height="294" /> </li>
         <li> <img src="./media/zan2.jpeg" alt="занятие2" width="370" height="294" /> </li>
         <li> <img src="./media/zan3.jpeg" alt="занятие3" width="370" height="294" /></li>
       </ul>
-    </section3>
+    </section>
 
-    <section4>
+    <section>
 
       <h2>Наша команда</h2>
       <ul>
@@ -85,7 +85,7 @@
         </li>
       </ul>
 
-    </section4>
+    </section>
 
   </main>
   <footer>
