--- a/index.html
+++ b/index.html
@@ -3,85 +3,96 @@
 
 <head>
   <title>goit-markup-hw-02</title>
-  <link href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
 <body>
-  <header><a href="">WebStudio</a>
-    <nav>
+  <header class="header">
+    <img class="img-header" src="./media/toplinebgtopbg.jpeg"/>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo">Studio</span></a>
+    <nav class="navigation">
       <ul>
-        <li><a href="#" class="link-inline">Студия</a> </li>
-        <li><a href="./portfolio.html" class="link-inline">Портфолио</a></li>
-        <li><a href="#" class="link-inline">Контакты</a></li>
+        <li><a href="#" class="link-inline1">Студия</a> </li>
+        <li><a href="./portfolio.html" class="link-inline2">Портфолио</a></li>
+        <li><a href="#" class="link-inline3">Контакты</a></li>
       </ul>
     </nav>
 
-    <a href="#" class="link-inline">info@devstudio.com</a>
-    <a href="#" class="link-inline">+38 096 111 11 11</a>
+    <a href="#" class="link-inline4">info@devstudio.com</a>
+    <a href="#" class="link-inline5">+38 096 111 11 11</a>
   </header>
 
   <main>
     <section>
-      <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-      <button type="button" class="button">Заказать услугу</button>
+      <img class="img-main" src="./media/bgbgblack.jpg"/>
+      <h1 class="main-logo">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <img class="main-button" src="./media/bgbuttonbg.jpg" />
+      <button type="button" class="button1">Заказать услугу</button>
     </section>
     <section2>
       <ul>
         <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
+          <h3 class="main-h-1">Внимание к деталям</h3>
+          <p class="main-p-1">Идейные соображения,а также начало повседневной работы по формированию позиции.</p>
         </li>
 
         <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации,в особенности же рамки и место обучения кадров влечет за собой.</p>
+          <h3 class="main-h-2">Пунктуальность</h3>
+          <p class="main-p-2">Задача организации,в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
 
         <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <h3 class="main-h-3">Планирование</h3>
+          <p class="main-p-3">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
 
         <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна,что реализация плановых заданий.
+          <h3 class="main-h-4">Современные технологии</h3>
+          <p class="main-p-4">Значимость этих проблем настолько очевидна,что реализация плановых заданий.
           </p>
         </li>
       </ul>
     </section>
 
     <section>
-      <h2>Чем мы занимаемся</h2>
+      <h2 class="main-section-1">Чем мы занимаемся</h2>
       <ul>
-        <li><img src="./media/zan1.jpeg" alt="занятие1" width="370" height="294" /> </li>
-        <li> <img src="./media/zan2.jpeg" alt="занятие2" width="370" height="294" /> </li>
-        <li> <img src="./media/zan3.jpeg" alt="занятие3" width="370" height="294" /></li>
+        <li><img class="section1-img-1" src="./media/zan1.jpeg" alt="занятие1" width="370" height="294" /> </li>
+        <li> <img class="section1-img-2" src="./media/zan2.jpeg" alt="занятие2" width="370" height="294" /> </li>
+        <li> <img class="section1-img-3" src="./media/zan3.jpeg" alt="занятие3" width="370" height="294" /></li>
       </ul>
     </section>
 
     <section>
-
-      <h2>Наша команда</h2>
+      <img class="main-section-2-bg" src="./media/comandabg.jpg"/>
+      <h2 class="main-section-2">Наша команда</h2>
       <ul>
         <li>
-          <img src="./media/igor.jpeg" alt="игорь фото" width="270" height="260" />
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
+          <img class="card-1" src="./media/card.jpg" />
+          <img class="photo-1" src="./media/igor.jpeg" alt="игорь фото" width="270" height="260" />
+          <h3 class="main-section2-h-1">Игорь Демьяненко</h3>
+          <p class="main-section2-p-1">Product Designer</p>
         </li>
 
-        <li><img src="./media/ola.jpeg" alt="ольга фото" width="270" height="260" />
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
+        <li>
+          <img class="card-2" src="./media/card.jpg" />
+          <img class="photo-2" src="./media/ola.jpeg" alt="ольга фото" width="270" height="260" />
+          <h3 class="main-section2-h-2">Ольга Репина</h3>
+          <p class="main-section2-p-2">Frontend Developer</p>
         </li>
 
-        <li><img src="./media/nic.jpeg" alt="николай фото" width="270" height="260" />
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
+        <li>
+          <img class="card-3" src="./media/card.jpg" />
+          <img class="photo-3" src="./media/nic.jpeg" alt="николай фото" width="270" height="260" />
+          <h3 class="main-section2-h-3">Николай Тарасов</h3>
+          <p class="main-section2-p-3">Marketing</p>
         </li>
 
-        <li><img src="./media/mih.jpeg" alt="михаил фото" width="270" height="260" />
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
+        <li>
+          <img class="card-4" src="./media/card.jpg" />
+          <img class="photo-4" src="./media/mih.jpeg" alt="михаил фото" width="270" height="260" />
+          <h3 class="main-section2-h-4">Михаил Ермаков</h3>
+          <p class="main-section2-p-4">UI Designer</p>
         </li>
       </ul>
 
@@ -89,14 +100,15 @@
 
   </main>
   <footer>
-    <a href="">WebStudio</a>
+    <img class="footer-bg" src="./media/footerbg.jpg" />
+    <a class="footer-link" href="" lang="en">Web<span class="accentfooter">Studio</span></a>
     <adress>
       <br>
-      <a href="#" class="link-inline">г. Киев, пр-т Леси Украинки, 26 </a>
+      <a href="#" class="link-inline6">г. Киев, пр-т Леси Украинки, 26 </a>
       <br>
-      <a href="#" class="link-inline">info@example</a>
+      <a href="#" class="link-inline7">info@example</a>
       <br>
-      <a href="#" class="link-inline">+38 099 111 11 11</a>
+      <a href="#" class="link-inline8">+38 099 111 11 11</a>
     </adress>
   </footer>
 </body>
