--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <header><a href="">WebStudio</a>
+  <header><a href="./index.html">WebStudio</a>
     <nav>
       <ul>
         <li><a href="#" class="link-inline">Студия</a> </li>
