--- a/portfolio.html
+++ b/portfolio.html
@@ -3,105 +3,112 @@
 
 <head>
   <title>goit-markup-hw-02</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
 <body>
-  <header><a href="./index.html">WebStudio</a>
-    <nav>
+  <header class="header">
+    <img class="img-header" src="./media/toplinebgtopbg.jpeg"/>
+    <a class="logo-link" href="./index.html" lang="en">Web<span class="accentlogo">Studio</span></a>
+    <nav class="navigation">
       <ul>
-        <li><a href="#" class="link-inline">Студия</a> </li>
-        <li><a href="./portfolio.html" class="link-inline">Портфолио</a></li>
-        <li><a href="#" class="link-inline">Контакты</a></li>
+        <li><a href="#" class="link-inline1">Студия</a> </li>
+        <li><a href="./portfolio.html" class="link-inline2">Портфолио</a></li>
+        <li><a href="#" class="link-inline3">Контакты</a></li>
       </ul>
     </nav>
 
-    <a href="#" class="link-inline">info@devstudio.com</a>
-    <a href="#" class="link-inline">+38 096 111 11 11</a>
+    <a href="#" class="link-inline4">info@devstudio.com</a>
+    <a href="#" class="link-inline5">+38 096 111 11 11</a>
   </header>
 
   <main>
     <section>
-      <button type="button" class="button">Все</button>
-      <button type="button" class="button">Веб-сайты</button>
-      <button type="button" class="button">Приложения</button>
-      <button type="button" class="button">Дизайн</button>
-      <button type="button" class="button">Маркетинг</button>
+      <button type="button" class="button2">Все</button>
+      <button type="button" class="button3">Веб-сайты</button>
+      <button type="button" class="button4">Приложения</button>
+      <button type="button" class="button5">Дизайн</button>
+      <button type="button" class="button6">Маркетинг</button>
     </section>
 
     <section>
       <ul>
         <li>
-          <img src="./media/imgtexno.jpg" alt="технохряк" width="370" height="294" />
-          <h3>Технохряк</h3>
-          <p>Веб-сайт</p>
+          <img class="all-cardbg-1" src="./media/cardbg2.jpg"/>
+          <img class="all-img-1" src="./media/imgtexno.jpg" alt="технохряк" width="370" height="294" />
+          <h3 class="all-h-1">Технохряк</h3>
+          <p class="all-p-1">Веб-сайт</p>
         </li>
 
         <li>
-          <img src="./media/imgposter.jpg" alt="постер" width="370" height="294" />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
+          <img class="all-cardbg-2" src="./media/cardbg2.jpg"/>
+          <img class="all-img-2" src="./media/imgposter.jpg" alt="постер" width="370" height="294" />
+          <h3 class="all-h-2">Постер New Orlean vs Golden Star</h3>
+          <p class="all-p-2">Дизайн</p>
         </li>
 
         <li>
-          <img src="./media/imgrestoran.jpg" alt="ресторан" width="370" height="294" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
+          <img class="all-cardbg-3" src="./media/cardbg2.jpg"/>
+          <img class="all-img-3" src="./media/imgrestoran.jpg" alt="ресторан" width="370" height="294" />
+          <h3 class="all-h-3">Ресторан Seafood</h3>
+          <p class="all-p-3">Приложение</p>
         </li>
 
         <li>
-          <img src="./media/imgproekt.jpg" alt="проект прайм" width="370" height="294" />
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
+          <img class="all-cardbg-4" src="./media/cardbg2.jpg"/>
+          <img class="all-img-4" src="./media/imgproekt.jpg" alt="проект прайм" width="370" height="294" />
+          <h3 class="all-h-4">Проект Prime</h3>
+          <p class="all-p-4">Маркетинг</p>
         </li>
 
         <li>
-          <img src="./media/imgproekt2.jpg" alt="проект боксы" width="370" height="294" />
-          <h3>Проект Prime</h3>
-          <p>Приложение</p>
+          <img class="all-cardbg-5" src="./media/cardbg2.jpg"/>
+          <img class="all-img-5" src="./media/imgproekt2.jpg" alt="проект боксы" width="370" height="294" />
+          <h3 class="all-h-5">Проект Prime</h3>
+          <p class="all-p-5">Приложение</p>
         </li>
 
         <li>
-          <img src="./media/imgins.jpg" alt="inspiration сайт" width="370" height="294" />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
+          <img class="all-cardbg-6" src="./media/cardbg2.jpg"/>
+          <img class="all-img-6" src="./media/imgins.jpg" alt="inspiration сайт" width="370" height="294" />
+          <h3 class="all-h-6">Inspiration has no Borders</h3>
+          <p class="all-p-6">Веб-сайт</p>
         </li>
 
         <li>
-          <img src="./media/imgrestoran.jpg" alt="ресторан" width="370" height="294" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
+          <img class="all-cardbg-7" src="./media/cardbg2.jpg"/>
+          <img class="all-img-7" src="./media/imgizdanie.jpg" alt="издание" width="370" height="294" />
+          <h3 class="all-h-7">Издание Limited Edition</h3>
+          <p class="all-p-7">Дизайн</p>
         </li>
 
         <li>
-          <img src="./media/imgizdanie.jpg" alt="издание" width="370" height="294" />
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
+          <img class="all-cardbg-8" src="./media/cardbg2.jpg"/>
+          <img class="all-img-8" src="./media/imglab.jpg" alt="lab проект" width="370" height="294" />
+          <h3 class="all-h-8">Проект Lab</h3>
+          <p class="all-p-8">Маркетинг</p>
         </li>
 
         <li>
-          <img src="./media/imglab.jpg" alt="lab проект" width="370" height="294" />
-          <h3>Проект Lab</h3>
-          <p>Маркетинг</p>
-        </li>
-
-        <li>
-          <img src="./media/imggrow.jpg" alt="grow business" width="370" height="294" />
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
+          <img class="all-cardbg-9" src="./media/cardbg2.jpg"/>
+          <img class="all-img-9" src="./media/imggrow.jpg" alt="grow business" width="370" height="294" />
+          <h3 class="all-h-9">Growing Business</h3>
+          <p class="all-p-9">Приложение</p>
         </li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <a href="">WebStudio</a>
+    <img class="footer2-bg" src="./media/footerbg.jpg" />
+    <a class="footer-link2" href="" lang="en">Web<span class="accentfooter2">Studio</span></a>
     <adress>
       <br>
-      <a href="#" class="link-inline">г. Киев, пр-т Леси Украинки, 26 </a>
+      <a href="#" class="link-inline9">г. Киев, пр-т Леси Украинки, 26 </a>
       <br>
-      <a href="#" class="link-inline">info@example</a>
+      <a href="#" class="link-inline10">info@example</a>
       <br>
-      <a href="#" class="link-inline">+38 099 111 11 11</a>
+      <a href="#" class="link-inline11">+38 099 111 11 11</a>
     </adress>
   </footer>
 
